--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <body>
   <div class="container">
     <h1 id="shadow">
-      <span id="glow">Welllcome to my Website</span>
+      <span id="glow">Welcome to my Website</span>
     </h1>
     <div class="button">
       <a href="./public/content.html">Learn More</a>
